--- a/_includes/section-aboutme.html
+++ b/_includes/section-aboutme.html
@@ -1,2 +1,14 @@
-<h1 class="title">{{site.about_me_title}}</h1>
-<p class="description" data-aos="fade-down">{{site.about_me_description}}</p>
+<div class = "d-flex">
+<div class="align-self-stretch">
+  <img src = "{{site.baseurl}}/assets/img/me.jpeg" height="300px">
+</div>
+<div class="container">
+    <div class="box">
+      <span></span>
+      <div class="content">
+        <h2>{{ site.about_me_title}}</h2>
+        <p>{{site.about_me_description}}</p>
+      </div>
+    </div>
+  </div>
+</div>
