--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,14 +1,14 @@
 <div id="landing">
   <div class="landing-title">
-    <h1>Hi, I&#39;m
-      <span class="highlight-title">{{site.username}}</span>,
+    <h1>I am
+      <span class="glitch" data-text="Kafrljki Ray" >{{site.username}}</span>
     </h1>
-    <h1>
+    <h3 style = "font-family: 'Press Start 2P', cursive;">
       <span id="txt-rotate" data-period="2000"
-        data-rotate='["{{site.typing_text}}", "scroll down for more."]'
+        data-rotate='["{{site.typing_text}}", "Coding my way through life"]'
       >
       </span>
-    </h1>
+    </h3>
     <div class="landing-icons">
       {% if site.email != null %}
         <a class="social-link email" aria-label="My E-Mail" href="mailto:{{site.email}}">
@@ -101,6 +101,22 @@
             </svg>
           </div>
           <span class="label">Twitter</span>
+        </a>
+      {% endif %}
+
+      {% if site.facebook_username != null %}
+        <a class="social-link facebook" aria-label="My FB" target="_blank"
+          rel="noreferrer" href="https://facebook.com/{{site.facebook_username}}"
+        >
+          <svg viewBox="0 0 200 200" class="circle">
+            <circle cx="100" cy="100" r="80" />
+          </svg>
+          <div class="social">
+            <svg class="social-svg" viewBox="0 0 48 48">
+              <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#facebook" | prepend: site.baseurl }}"></use>
+            </svg>
+          </div>
+          <span class="label">Facebook</span>
         </a>
       {% endif %}
     </div>
