--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,13 @@
   <title>{{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
 
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/bootstrap/bootstrap.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/favicon/apple-touch-icon.png" | prepend: site.baseurl }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon/favicon-32x32.png" | prepend: site.baseurl }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon/favicon-16x16.png" | prepend: site.baseurl }}">
   <link rel="manifest" href="{{ "/assets/favicon/site.webmanifest" | prepend: site.baseurl }}">
 
-  <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/vendors.min.css" | prepend: site.baseurl }}">
 
   <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
@@ -31,11 +32,10 @@
     </div>
   </div>
   {% include landing-page.html %}
+ 
   <div class="layout">
     {%if site.show_aboutme_card %}
-      <section class="card neumorphism-card-big">
-        {% include section-aboutme.html %}
-      </section>
+      {% include section-aboutme.html %}
     {% endif %}
     {%if site.show_skills_card %}
       <section class="card neumorphism-card-big">
