--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+
 
 /* Variables */
 
@@ -14,11 +16,12 @@ $font-size-base: 1rem !default;
 $font-size-h1: 2rem !default;
 $font-weight-strong: 600;
 $text-color: #fff !default;
-$bg-color: rgba(43, 45, 47, 1);
+$bg-color: #000;
+$glitch-bg-color: $bg-color;
 $card-bg-color: linear-gradient(
   145deg,
-  rgba(115, 115, 115, 0.15) 15%,
-  rgba(43, 45, 47, 1) 80%
+  rgb(0,0,0) 15%,
+  rgb(0,0,0) 80%
 );
 $primary-color: #ff073a;
 
@@ -31,20 +34,20 @@ html {
   font-size: $font-size-base;
   font-weight: normal;
   height: 100%;
-  overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
+  background: $bg-color;
   height: 100%;
 }
 
 /* Typography */
 
-h1 {
-  font-size: $font-size-h1;
-  font-weight: $font-weight-strong;
-  line-height: 2rem;
-}
+
 
 p {
   word-spacing: 0.1rem;
@@ -58,11 +61,153 @@ a {
     color: $text-color;
   }
 }
-
-.highlight-title {
-  color: $primary-color;
-  text-shadow: 0.25rem 0.25rem 0.25rem $primary-color;
+h1{
+  font-family: 'Press Start 2P', cursive;
+  font-weight: bold;
+  font-size: 20px;
 }
+.glitch {
+  position: relative;
+background: $glitch-bg-color;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 35px;
+  font-weight: bold;
+  color: #ffa5a5;
+}
+
+.glitch::before,
+.glitch::after {
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate-reverse;
+  overflow: hidden;
+  position: absolute;
+  top: -2px;
+  clip: rect(0, 900px, 0, 0);
+  content: attr(data-text);
+}
+
+.glitch::after {
+  animation-name: glitch-animation;
+  animation-duration: 4s;
+  left: 4px;
+  text-shadow: -1px 0 #ffa800;
+  background: $glitch-bg-color;
+}
+
+.glitch::before {
+  animation-name: glitch-animation-2;
+  animation-duration: 6s;
+  left: -4px;
+  text-shadow: 1px 0 #00d8ff;
+  background: $glitch-bg-color;
+}
+
+@mixin rect($top, $bottom) {
+  clip: rect($top, 9999px, $bottom, 0);
+}
+
+/* Expanded Animations */
+@keyframes glitch-animation {
+  0% { @include rect(42px, 44px); }
+  5% { @include rect(12px, 59px); }
+  10% { @include rect(48px, 29px); }
+  15.0% { @include rect(42px, 73px); }
+  20% { @include rect(63px, 27px); }
+  25% { @include rect(34px, 55px); }
+  30.0% { @include rect(86px, 73px); }
+  35% { @include rect(20px, 20px); }
+  40% { @include rect(26px, 60px); }
+  45% { @include rect(25px, 66px); }
+  50% { @include rect(57px, 98px); }
+  55.0% { @include rect(5px, 46px); }
+  60.0% { @include rect(82px, 31px); }
+  65% { @include rect(54px, 27px); }
+  70% { @include rect(28px, 99px); }
+  75% { @include rect(45px, 69px); }
+  80% { @include rect(23px, 85px); }
+  85.0% { @include rect(54px, 84px); }
+  90% { @include rect(45px, 47px); }
+  95% { @include rect(37px, 20px); }
+  100% { @include rect(4px, 91px); }
+}
+
+@keyframes glitch-animation-2 {
+  0% { @include rect(65px, 100px); }
+  5% { @include rect(52px, 74px); }
+  10% { @include rect(79px, 85px); }
+  15.0% { @include rect(75px, 5px); }
+  20% { @include rect(67px, 61px); }
+  25% { @include rect(14px, 79px); }
+  30.0% { @include rect(1px, 66px); }
+  35% { @include rect(86px, 30px); }
+  40% { @include rect(23px, 98px); }
+  45% { @include rect(85px, 72px); }
+  50% { @include rect(71px, 75px); }
+  55.0% { @include rect(2px, 48px); }
+  60.0% { @include rect(30px, 16px); }
+  65% { @include rect(59px, 50px); }
+  70% { @include rect(41px, 62px); }
+  75% { @include rect(2px, 82px); }
+  80% { @include rect(47px, 73px); }
+  85.0% { @include rect(3px, 27px); }
+  90% { @include rect(26px, 55px); }
+  95% { @include rect(42px, 97px); }
+  100% { @include rect(38px, 49px); }
+}
+
+
+@keyframes shift {
+  0%,40%, 44%, 58%, 61%, 65%,69%,73%,100% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+  }
+  41% {
+    -moz-transform: skewX(10deg);
+    -ms-transform: skewX(10deg);
+    -webkit-transform: skewX(10deg);
+    transform: skewX(10deg);
+  }
+  42% {
+    -moz-transform: skewX(-10deg);
+    -ms-transform: skewX(-10deg);
+    -webkit-transform: skewX(-10deg);
+    transform: skewX(-10deg);
+  }
+  59% {
+    -moz-transform: skewX(40deg) skewY(10deg);
+    -ms-transform: skewX(40deg) skewY(10deg);
+    -webkit-transform: skewX(40deg) skewY(10deg);
+    transform: skewX(40deg) skewY(10deg);
+  }
+  60% {
+    -moz-transform: skewX(-40deg) skewY(-10deg);
+    -ms-transform: skewX(-40deg) skewY(-10deg);
+    -webkit-transform: skewX(-40deg) skewY(-10deg);
+    transform: skewX(-40deg) skewY(-10deg);
+  }
+  63% {
+    -moz-transform: skewX(10deg) skewY(-5deg);
+    -ms-transform: skewX(10deg) skewY(-5deg);
+    -webkit-transform: skewX(10deg) skewY(-5deg);
+    transform: skewX(10deg) skewY(-5deg);
+  }
+  70% {
+    -moz-transform: skewX(-50deg) skewY(-20deg);
+    -ms-transform: skewX(-50deg) skewY(-20deg);
+    -webkit-transform: skewX(-50deg) skewY(-20deg);
+    transform: skewX(-50deg) skewY(-20deg);
+  }
+  71% {
+    -moz-transform: skewX(10deg) skewY(-10deg);
+    -ms-transform: skewX(10deg) skewY(-10deg);
+    -webkit-transform: skewX(10deg) skewY(-10deg);
+    transform: skewX(10deg) skewY(-10deg);
+  }
+}
+
 
 .highlight-link {
   box-shadow: inset 0 -0.125rem 0 $primary-color;
@@ -88,7 +233,7 @@ a {
 
 .layout .card {
   background: $card-bg-color;
-  border-radius: 2rem;
+  border-radius: 2%;
   margin: 3rem 0;
   padding: 1rem 2rem;
 }
@@ -392,7 +537,7 @@ a {
   }
 
   div[skill-type="language"] {
-    color: #e84a5f;
+    color: #4ae8b3;
   }
 
   div[skill-type="framework"] {
@@ -400,7 +545,7 @@ a {
   }
 
   div[skill-type="tool"] {
-    color: #fecea8;
+    color: #f7a8fe;
   }
 
   div[skill-weight="1"] {
@@ -712,18 +857,19 @@ a {
       padding: 0.5rem 0.25rem;
       text-align: center;
       width: 21%;
+      color: #f3f3f3;
+      transition: 0.2s;
 
       &:hover {
         letter-spacing: 0.25rem;
+        transition: 0.2s;
       }
     }
 
     @mixin filter-out {
-      height: 0;
-      margin: 0;
       opacity: 0;
-      padding: 0;
-      width: 0;
+      
+      
     }
 
     input[type="radio"]:checked + .filter-button {
@@ -735,16 +881,19 @@ a {
     input[id="language"]:checked ~ div[skill-type="framework"],
     input[id="language"]:checked ~ div[skill-type="tool"] {
       @include filter-out;
+      transition: 1s;
     }
 
     input[id="framework"]:checked ~ div[skill-type="language"],
     input[id="framework"]:checked ~ div[skill-type="tool"] {
       @include filter-out;
+      transition: 1s;
     }
 
     input[id="tool"]:checked ~ div[skill-type="language"],
     input[id="tool"]:checked ~ div[skill-type="framework"] {
       @include filter-out;
+      transition: 1s;
     }
   }
 
@@ -910,3 +1059,5 @@ a {
     bottom: 0;
   }
 }
+
+
