--- a/_includes/section-timeline.html
+++ b/_includes/section-timeline.html
@@ -1,12 +1,12 @@
-<h1 class="title">{{site.timeline_title}}</h1>
-<p class="subtitle">
+<h1 class="title text-light">{{site.timeline_title}}</h1>
+<p class="subtitle text-light">
   For more information, have a look at my
   <a class="highlight-link" href="{{site.cv_download_link}}" target="_blank" rel="noreferrer">
     curriculum vitae
   </a>.
 </p>
 
-<div class="timeline-wrapper">
+<div class="timeline-wrapper text-light">
   <ul class="timeline">
     {% for event in site.data.timeline %}
       {% if event.timeline-side == 'left' %}
